src/objects/Int_Party_Feature__c.object
<CustomObject>
    <description>Int Party Feature</description>
    <fields>
        <fullName>Committed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Committed check box</description>
        <label>Committed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Feature_Name__c</fullName>
        <description>Feature Name</description>
        <label>Feature Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Party_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Party Name</description>
        <label>Party Name</label>
        <referenceTo>Int_Party__c</referenceTo>
        <relationshipLabel>Int Party Features</relationshipLabel>
        <relationshipName>Int_Party_Features</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Party_Number__c</fullName>
        <description>Party Number</description>
        <label>Party Number</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Party_Source_System__c</fullName>
        <description>Party Source System</description>
        <label>Party Source System</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value_AlphaNumeric__c</fullName>
        <description>Value AlphaNumeric</description>
        <label>Value AlphaNumeric</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value_DateTime__c</fullName>
        <description>Value DateTime</description>
        <label>Value DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Value_Numeric__c</fullName>
        <description>Value Numeric</description>
        <label>Value Numeric</label>
        <length>38</length>
        <type>Text</type>
    </fields>
    <label>Int Party Feature</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Party_Number__c</columns>
        <columns>Party_Name__c</columns>
        <columns>Value_AlphaNumeric__c</columns>
        <columns>Value_DateTime__c</columns>
        <columns>Value_Numeric__c</columns>
        <columns>Party_Source_System__c</columns>
        <columns>Feature_Name__c</columns>
        <columns>Committed__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PFI-{0000000000}</displayFormat>
        <label>Party Feature Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Int Party Features</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>